plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.solcation'
version = '0.0.1-SNAPSHOT'
description = 'solcation_be'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.104.Final:osx-aarch_64'

    /* security */
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    /* lombok */
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testCompileOnly 'org.projectlombok:lombok';
    testAnnotationProcessor 'org.projectlombok:lombok'

    /* Validation */
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    /* jwt */
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    implementation 'io.jsonwebtoken:jjwt-impl:0.13.0'
    implementation 'io.jsonwebtoken:jjwt-gson:0.13.0'
    
    /* jpa, querydsl */
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
    implementation 'com.querydsl:querydsl-core'
    implementation 'com.querydsl:querydsl-collections'
    annotationProcessor(
            "jakarta.persistence:jakarta.persistence-api",
            "jakarta.annotation:jakarta.annotation-api",
            "com.querydsl:querydsl-apt:5.1.0:jakarta"
    )

    /* mariadb */
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

    /* swagger */
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
    implementation 'org.apache.commons:commons-lang3:3.18.0'

    /* aws */
    implementation 'software.amazon.awssdk:s3:2.33.0'
    implementation 'software.amazon.awssdk:sts:2.33.0'

    /* websocket */
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    /* redisson */
    implementation 'org.redisson:redisson-spring-boot-starter:3.28.0'
    implementation 'org.redisson:redisson:3.27.2'

    /* redis */
    implementation 'org.springframework.data:spring-data-redis'
    implementation 'io.lettuce:lettuce-core'

    /* json - jackson */
    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    /* batch */
    implementation 'org.springframework.boot:spring-boot-starter-batch'
    testImplementation 'org.springframework.batch:spring-batch-test'

    /* webclient - reactive http client */
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
}

tasks.named('test') {
    useJUnitPlatform()
}
